--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ th {
 <script>
 console.log("JS carregado");
 
-fetch("http://127.0.0.1:8000/scan")
+fetch("https://racker-ultra-api.onrender.com/scan")
 .then(res => {
     console.log("Resposta recebida");
     return res.json();
